[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-remarkable-sync"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "watchdog>=4.0",
    "pathspec>=0.12",
    "weasyprint>=62",
]

[project.scripts]
obsidian-remarkable-sync = "obsidian_remarkable_sync.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["obsidian_remarkable_sync*"]
